--- a/Lootopia/backend/package.json
+++ b/Lootopia/backend/package.json
@@ -17,7 +17,8 @@
     "next": "^15.3.1",
     "pg": "^8.15.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "22.15.3",
