--- a/Lootopia/package.json
+++ b/Lootopia/package.json
@@ -45,7 +45,10 @@
     "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "react-router-dom": "^7.6.0",
+    "sass": "^1.88.0",
+    "wouter": "^3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
