--- a/Lootopia/backend/package.json
+++ b/Lootopia/backend/package.json
@@ -12,6 +12,7 @@
     "seed": "knex seed:run"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "knex": "^3.1.0",
     "next": "^15.3.1",
