--- a/Lootopia/backend/package.json
+++ b/Lootopia/backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "knex": "^3.1.0",
     "next": "^15.3.1",
