--- a/Lootopia/frontend/tsconfig.json
+++ b/Lootopia/frontend/tsconfig.json
@@ -7,7 +7,7 @@
       "dom"
     ],
     "jsx": "react-native",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowJs": true,
     "esModuleInterop": true,
     "strict": true,
