--- a/Lootopia/frontend/package.json
+++ b/Lootopia/frontend/package.json
@@ -55,7 +55,9 @@
     "react-native-webview": "13.13.5",
     "react-router-dom": "^7.6.0",
     "sass": "^1.88.0",
-    "wouter": "^3.7.0"
+    "wouter": "^3.7.0",
+    "react-native-maps": "1.20.1",
+    "expo-location": "~18.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
