--- a/Lootopia/frontend/tsconfig.json
+++ b/Lootopia/frontend/tsconfig.json
@@ -27,12 +27,10 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ],
+    "**/*.tsx"
+, "../app.config.ts"  ],
   "exclude": [
     "node_modules"
   ],
- "extends": "expo/tsconfig.base",
+  "extends": "expo/tsconfig.base"
 }
