--- a/Lootopia/package.json
+++ b/Lootopia/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "dotenv": "^16.5.0",
     "expo": "latest"
   }
 }
