--- a/Lootopia/frontend/tsconfig.json
+++ b/Lootopia/frontend/tsconfig.json
@@ -27,8 +27,11 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx"
-, "../app.config.ts"  ],
+    "**/*.tsx",
+    "../app.config.ts",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts"
+  ],
   "exclude": [
     "node_modules"
   ],
