--- a/Lootopia/frontend/package.json
+++ b/Lootopia/frontend/package.json
@@ -23,6 +23,7 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@types/leaflet": "^1.9.18",
     "dotenv": "^16.5.0",
     "expo": "^53.0.11",
     "expo-blur": "~14.1.5",
@@ -31,6 +32,7 @@
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.5",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -38,13 +40,16 @@
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
     "knex": "^3.1.0",
+    "leaflet": "^1.9.4",
     "nativewind": "^4.1.23",
     "next": "^15.3.1",
     "pg": "^8.15.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "^1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -55,9 +60,7 @@
     "react-native-webview": "13.13.5",
     "react-router-dom": "^7.6.0",
     "sass": "^1.88.0",
-    "wouter": "^3.7.0",
-    "react-native-maps": "1.20.1",
-    "expo-location": "~18.1.5"
+    "wouter": "^3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
