--- a/Lootopia/frontend/package.json
+++ b/Lootopia/frontend/package.json
@@ -57,7 +57,7 @@
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "^13.13.5",
     "react-router-dom": "^7.6.0",
     "sass": "^1.88.0",
     "wouter": "^3.7.0"
