--- a/Lootopia/frontend/package.json
+++ b/Lootopia/frontend/package.json
@@ -50,7 +50,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
-    "react-router-dom": "^7.6.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "sass": "^1.88.0",
     "wouter": "^3.7.0"
   },
