--- a/Lootopia/frontend/package.json
+++ b/Lootopia/frontend/package.json
@@ -35,11 +35,14 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "knex": "^3.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.2.0",
     "nativewind": "^4.1.23",
     "next": "^15.3.1",
     "pg": "^8.15.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-native": "0.76.9",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
@@ -59,6 +62,7 @@
     "@babel/core": "^7.27.1",
     "@react-native-community/cli": "^18.0.0",
     "@types/jest": "^29.5.12",
+    "@types/leaflet": "^1.9.18",
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
